# Python-Scripts

./: .cache_ggshield  .gitguardian.yaml  .gitignore  LICENSE  README.md  music_genre_updater.py  pyproject.toml  update_genres.py  update_play_counts.py
.trunk/: trunk.yaml
Genres Autoupdater/: config.json  config.yaml  music_genre_updater.py
Genres Autoupdater v2.0/: .gitignore  .python-version  config.yaml  full_sync.py  music_genre_updater.py  my-config.yaml  plan.md  pyproject.toml.bak  readme.md  requirements.txt
Genres Autoupdater v2.0/.cursor/memory-bank/: activeContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md
Genres Autoupdater v2.0/.cursor/rules/: memory-bank-always.mdc
Genres Autoupdater v2.0/.cursor/rules/isolation_rules/: main.mdc
Genres Autoupdater v2.0/.cursor/scripts/: update_memory_bank.py
Genres Autoupdater v2.0/AppleScripts/: fetch_tracks.applescript  update_property.applescript
Genres Autoupdater v2.0/logger/: logger.py
Genres Autoupdater v2.0/reports/: __init__.py  reports.py
Genres Autoupdater v2.0/scripts/: analytics.py  applescript_client.py  dry-run.py  dry_run.py  logger.py  reports.py
Genres Autoupdater v2.0/services/: __init__.py  applescript_client.py  cache_service.py  dependencies_service.py  external_api_service.py  pending_verification.py
Genres Autoupdater v2.0/tests/: __init__.py  test_musicbrainz_filter.py
Genres Autoupdater v2.0/utils/: analytics.py  config.py  dry_run.py  logger.py  metadata.py  metadata_helpers.py  reports.py
